Bug 310634 - Misleading/Broken popup when opening the same session twice
Summary: Misleading/Broken popup when opening the same session twice
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-25 03:03 UTC by Emmanuel Lepage Vallée
Modified: 2012-12-09 14:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments
patch by Ariel Sanhueza Roman (1.36 KB, patch)
2012-12-06 10:11 UTC, Dominik Haumann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Emmanuel Lepage Vallée 2012-11-25 03:03:17 UTC
When opening a session (the first dialog when opening Kate), and this session is already active, I get:

"Session 'Umbrello3' is already opened in another kate instance, change there instead of reopening?" [Yes/no]

But both "yes" and "no" bring back to the session dialog while the message state that one will reopen while the other will focus the other session. So the label text does not match the behavior. Minor, but still, "going the extra" mile in usability is a priority, sort of. (Reporting for the records. Not because it cause me much trouble)

Reproducible: Always

Steps to Reproduce:
1. Open Kate, choose a session
2. Open Kate, choose the same session
3. Press a button
Comment 1 Dominik Haumann 2012-12-06 10:11:34 UTC
Created attachment 75653 [details]
patch by Ariel Sanhueza Roman

Now "yes" button close actual Kate instance and "no" button
open the same session.
Comment 2 Dominik Haumann 2012-12-09 14:01:02 UTC
Git commit 552e39b003467d2b6cc662d69daecbd71b8d4be6 by Dominik Haumann.
Committed on 09/12/2012 at 14:56.
Pushed by dhaumann into branch 'master'.

fix: Misleading/Broken popup when opening the same session twice

Thanks to Emmanuel Lepage Vallée <elv1313@gmail.com> for the patch!

M  +4    -4    kate/app/katesession.cpp

http://commits.kde.org/kate/552e39b003467d2b6cc662d69daecbd71b8d4be6
Comment 3 Dominik Haumann 2012-12-09 14:02:56 UTC
Sorry, I mixed that up: Thanks to Ariel Sanhueza Roman for the patch, keep it up! :)