fix: Misleading/Broken popup when opening the same session twice

Thanks to Emmanuel Lepage Vallée <elv1313@gmail.com> for the patch!
BUG: 310634